objects/CounselorTraining__c.object
<CustomObject>
    <description>To store information about counselor training, including completed courses, certifications, and relevant training activities.</description>
    <fields>
        <fullName>Counselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counselor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Counselor_Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDTrainingOrganizationOther__c</fullName>
        <description>Represents the truncated text of the organization responsible for HUD training if not listed in full.</description>
        <formula>LEFT( TrainingOrganizationOther__c , 40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically extracts the first 40 characters from the &quot;Training Organization Other&quot;</inlineHelpText>
        <label>HUD Training Organization Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDTrainingSponsorOther__c</fullName>
        <description>Represents the truncated text of the sponsor for HUD training if not listed in full.</description>
        <formula>LEFT( TrainingSponsorOther__c , 40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically extracts the first 40 characters from the &quot;Training Sponsor Other&quot;</inlineHelpText>
        <label>HUD Training Sponsor Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingCertificate__c</fullName>
        <description>Indicates whether the staff member received a training certificate.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the staff member received a training certificate; otherwise, select &quot;No&quot;. This field serves as a record of certification for completed training programs.</inlineHelpText>
        <label>Training Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingCourseEndDate__c</fullName>
        <description>The end date of the training course.</description>
        <inlineHelpText>Enter the end date of the training course. This helps in tracking the duration and completion status of the training program.</inlineHelpText>
        <label>Training Course End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrainingCourseID__c</fullName>
        <description>The unique identifier assigned to the training course.</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Enter the unique identifier assigned to the training course if applicable. This ID helps in linking training records to specific courses or programs.</inlineHelpText>
        <label>Training Course ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TrainingDuration__c</fullName>
        <description>The duration of the training session or course.</description>
        <inlineHelpText>Enter the duration of the training session or course, typically specified in minutes.</inlineHelpText>
        <label>Training Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingOrganizationOther__c</fullName>
        <description>An option to specify another organization responsible for training if not listed.</description>
        <inlineHelpText>If the organization responsible for training is not listed, enter the name of the organization in this field. This ensures accurate recording of training providers.</inlineHelpText>
        <label>Training Organization Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingOrganization__c</fullName>
        <description>The organization responsible for conducting the training.</description>
        <inlineHelpText>Select the organization responsible for conducting the training from the available options. This field helps in identifying the entity delivering the training program.</inlineHelpText>
        <label>Training Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NeighborWorks America</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>La Raza</fullName>
                </value>
                <value>
                    <fullName>NCRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingSponsorOther__c</fullName>
        <description>An option to specify another entity sponsoring or funding the training if not listed.</description>
        <inlineHelpText>If the sponsoring entity is not listed, enter the name of the sponsor in this field. This ensures accurate recording of financial support for the training program.</inlineHelpText>
        <label>Training Sponsor Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingSponsor__c</fullName>
        <description>The entity sponsoring or funding the training program.</description>
        <inlineHelpText>Select the entity sponsoring or funding the training program from the available options. This field provides insights into the financial support for the training initiative.</inlineHelpText>
        <label>Training Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingTitle__c</fullName>
        <description>The title or name of the training program.</description>
        <inlineHelpText>Enter the title or name of the training program. This field provides a clear identifier for the training initiative and helps in organizing and tracking training records.</inlineHelpText>
        <label>Training Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(
				ISPICKVAL(TrainingCertificate__c, &apos;&apos;) ||
				ISNULL(TrainingCourseID__c) ||
				ISBLANK(TrainingTitle__c) ||
				ISNULL(TrainingCourseEndDate__c	) ||
				ISPICKVAL(TrainingOrganization__c, &apos;&apos;) ||
				ISPICKVAL(TrainingSponsor__c, &apos;&apos;),
				&apos;Required field(s) missing: &apos; &amp;
				IF(ISPICKVAL(TrainingCertificate__c, &apos;&apos;), &apos;Training Certificate, &apos;, &apos;&apos;) &amp;
				IF(ISNULL(TrainingCourseID__c), &apos;Training Course ID, &apos;, &apos;&apos;) &amp;
				IF(ISBLANK(TrainingTitle__c), &apos;Training Title, &apos;, &apos;&apos;) &amp;
				IF(ISNULL(TrainingCourseEndDate__c), &apos;Training Date, &apos;, &apos;&apos;)  &amp;
				IF(ISPICKVAL(TrainingOrganization__c, &apos;&apos;), &apos;Training Organization, &apos;, &apos;&apos;)  &amp;
				IF(ISPICKVAL(TrainingSponsor__c, &apos;&apos;), &apos;Training Sponsor, &apos;, &apos;&apos;),
				&apos;NO ERROR&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <label>Counselor Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Counselor__c</columns>
        <columns>TrainingCertificate__c</columns>
        <columns>TrainingCourseEndDate__c</columns>
        <columns>TrainingOrganization__c</columns>
        <columns>TrainingDuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Training {000000}</displayFormat>
        <label>Counselor Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counselor Training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>